# rust-filesize

./: .travis.yml  Cargo.toml  LICENSE.txt  README.md
examples/: filesize.rs
src/: lib.rs
